feat: testserver channel support and native image launching